# LineageEngine

Documentos/lineage-engine/: .coverage  pyproject.toml
Documentos/lineage-engine/docker/: docker-compose.yml
Documentos/lineage-engine/src/lineage_engine/core/: graph_builder.py  tracker.py
Documentos/lineage-engine/src/lineage_engine/models/: lineage.py
Documentos/lineage-engine/src/lineage_engine/storage/: jsonl_handler.py
Documentos/lineage-engine/tests/: test_models.py  test_tracker.py
