[project]
name = "lineage-engine"
version = "0.1.0"
description = "Real-Time Data Lineage Engine — portfolio project"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/lineage_engine --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src/lineage_engine"]
